--- a/12th.html
+++ b/12th.html
@@ -192,11 +192,13 @@
 
                 <div class="card 7">
                     <div><b>7. Government and <br> Defense</b>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        class="injected-svg" data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
-                        <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
-                    </svg></div>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
                     <div class="descri">
                         <img class="cross" src="accets/cross.svg" alt="">
                         <li> NDA (National Defence Academy)</li>
@@ -223,6 +225,18 @@
                         <li> Wildlife Conservation</li>
                     </div>
                 </div>
+
+
+                <div style="background-image:linear-gradient(to right, #6a11cb, #2575fc);" class="card 9"><a
+                        href="exam.html" style="color: white; text-decoration: none;"> ALL EXAMS SCI,COM,ARTS<br>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </a></div>
+
             </div>
 
 
@@ -238,6 +252,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <ul>
                             <li>BA (Bachelor of Arts) in:</li>
                             <ul>
@@ -263,6 +278,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> Fine Arts (BFA)</li>
                         <li> Performing Arts (Dance, Theatre, Music)</li>
                         <li> Visual Communication</li>
@@ -283,6 +299,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> BA in English, Hindi, French, German, Spanish, or any regional language.</li>
                         <li> Career Options: Writer, Translator, Editor, Language Instructor.</li>
                     </div>
@@ -297,6 +314,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> BA LLB (5-year integrated law course)</li>
                         <li> Career Options: Lawyer, Legal Advisor, Judge (after further qualifications).</li>
                     </div>
@@ -313,6 +331,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> Mass Communication</li>
                         <li> Journalism</li>
                         <li> Digital Media</li>
@@ -331,6 +350,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> Bachelor of Education (B.Ed.) (Post-Graduation Required)</li>
                         <li> Career Options: Teacher, Educational Consultant, Academician.</li>
                     </div>
@@ -345,7 +365,7 @@
                         <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
                     </svg>
                     <div class="descri">
-
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> Bachelor’s in Event Management</li>
                         <li> Career Options: Event Planner, Wedding Coordinator, Conference Organizer.</li>
                     </div>
@@ -353,7 +373,7 @@
 
 
                 <div class="card 8">
-                    <div><b>8. Hotel Management</b><br>
+                    <div>8. Hotel Management<br>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             class="injected-svg"
                             data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
@@ -362,6 +382,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> Bachelor’s in Hotel Management (BHM)</li>
                         <li> Career Options: Hospitality Manager, Chef, Travel Coordinator.</li>
                     </div>
@@ -381,6 +402,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <ul>
                             <li>BB.Com (Bachelor of Commerce) in:</li>
                             <ul>
@@ -402,6 +424,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> Chartered Accountancy (CA)</li>
                         <li> Company Secretary (CS)</li>
                         <li> Cost and Management Accountancy (CMA)</li>
@@ -419,6 +442,7 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li>Bachelor of Business Administration (BBA)</li>
                         <li>Bachelor of Management Studies (BMS)</li>
                         <li>Bachelor of International Business (BIB)</li>
@@ -435,12 +459,11 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> BA or B.Sc. in Economics</li>
                         <li> Career Options: Economist, Policy Analyst, Statistician.</li>
                     </div>
                 </div>
-
-
                 <div class="card 5">
                     <div><b>5. Banking and Finance</b><br>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -451,13 +474,12 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> B.Com in Banking and Finance</li>
                         <li> Diploma in Banking and Financial Services</li>
                         <li> Career Options: Investment Banker, Credit Analyst, Stock Broker.</li>
                     </div>
                 </div>
-
-
                 <div class="card 6">
                     <div><b>6. Data Analytics & IT</b><br>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -468,13 +490,12 @@
                         </svg>
                     </div>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> B.Com or B.Sc. in Statistics</li>
                         <li> Diploma in Data Science/Analytics</li>
                         <li> Career Options: Data Analyst, Business Intelligence Specialist.</li>
                     </div>
                 </div>
-
-
                 <div class="card 7">
                     <div><b>7. Travel and Tourism</div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -483,14 +504,13 @@
                         <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
                     </svg>
                     <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
                         <li> Bachelor of Travel and Tourism Management</li>
                         <li> Career Options: Travel Agent, Tour Guide, Tourism Manager.</li>
                     </div>
                 </div>
-
-
                 <div class="card 8">
-                    <div><b>8. Insurance and Risk Management</b>
+                    <div>8. Insurance and Risk Management
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             class="injected-svg"
                             data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
@@ -499,13 +519,13 @@
                         </svg>
                     </div>
                     <div class="descri">
-                       <li> Diploma in Risk Management</li>
-                       <li> B.Com in Insurance</li>
-                       <li> Career Options: Insurance Underwriter, Claims Manager.</li>
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        <li> Diploma in Risk Management</li>
+                        <li> B.Com in Insurance</li>
+                        <li> Career Options: Insurance Underwriter, Claims Manager.</li>
+
                     </div>
                 </div>
-            </div>
-
         </div>
         <div class="footer"></div>
     </main>
