--- a/gradution.html
+++ b/gradution.html
@@ -4,21 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Career Path</title>
-    <link rel="stylesheet" href="gradution.css
-    ">
+    <title>Career Path After 10th</title>
+    <link rel="stylesheet" href="12th.css">
     <link rel="shortcut icon" href="accets/f2.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
-    <img src="accets/bgimg.jpg" alt="" class="bg">
     <header>
         <nav>
             <div class="logo">
-                <img src="accets/empowerU.png">
+                <img src="accets/empowerU.png" alt="">
             </div>
             <div class="menu">
                 <input type="checkbox" id="menu-toggle">
@@ -50,8 +46,198 @@
         </nav>
     </header>
     <main>
-        
+
+        <div class="main">
+
+
+            <h3>Career Path After Graduation</h3>
+            <div class="crds">
+                <div class="card 1">
+                    <div><b>1. Technical <br> Post Graduation Courses</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        <li>MTech (Masters in Technology)</li>
+                        <li> MBA (Masters of Business Administration)</li>
+                        <li>  MSc or MS (Masters of Science)</li>
+                        <li> PGDM (Post Graduate Diploma in Management)</li>
+                        <li> Merchant Navy Courses</li>
+                        <li> Animation/VFX Courses</li>
+                        <li>Entrepreneurship Courses</li>
+                        <li> Game Designing Courses</li>
+                        <li> PG/ Diploma Certificate Courses</li>
+
+                    </div>
+                </div>
+                <div class="card 2">
+                    <div><b>2. Medical and Healthcare Fields</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        (For PCB students or those interested in Biology)
+                        <li> MBBS (Doctor)</li>
+                        <li> BDS (Dentistry)</li>
+                        <li> BAMS (Ayurveda)</li>
+                        <li> BHMS (Homeopathy)</li>
+                        <li> BPT (Physiotherapy)</li>
+                        <li> B.Sc. in Nursing</li>
+                        <li> Pharmacy (B.Pharm)</li>
+                        <li> Biotechnology/Bioinformatics</li>
+                        <li> Occupational Therapy</li>
+                        <li> Veterinary Science (BVSc)</li>
+                        <li> Nutrition and Dietetics</li>
+                    </div>
+                </div>
+                <div class="card 3">
+                    <div><b>3. Interdisciplinary and Pure Sciences</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        (For both PCM and PCB students interested in research or academia)
+
+                        <li> B.Sc. (Physics, Chemistry, Mathematics, or Biology)</li>
+                        <li> Environmental Science</li>
+                        <li> Microbiology</li>
+                        <li> Genetics</li>
+                        <li> Zoology/Botany</li>
+                        <li> Astronomy</li>
+                        <li> Forensic Science</li>
+                        <li> Data Science/Statistics</li>
+                        <li> Actuarial Science</li>
+                    </div>
+                </div>
+                <div class="card 4">
+                    <div><b>4. Technology and Emerging Fields</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        <li> Artificial Intelligence and Machine Learning</li>
+                        <li> Cybersecurity</li>
+                        <li> Game Development</li>
+                        <li> Blockchain Technology</li>
+                        <li> Cloud Computing</li>
+                    </div>
+                </div>
+
+
+                <div class="card 5">
+                    <div><b>5. Non-Technical and Creative Fields</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        <li> Architecture (B.Arch)</li>
+                        <li> Interior Design</li>
+                        <li> Fashion Design</li>
+                        <li> Product Design</li>
+                        <li> Animation and VFX</li>
+                        <li> Graphic Design</li>
+                    </div>
+                </div>
+
+
+                <div class="card 6">
+                    <div><b>6. Commerce and Management</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        (Suitable for science students who wish to switch streams)
+
+                        <li> BBA (Bachelor of Business Administration)</li>
+                        <li> Hotel Management</li>
+                        <li> CA, CS, or CMA (Professional Courses)</li>
+                        <li> Economics or Finance</li>
+                    </div>
+                </div>
+
+
+                <div class="card 7">
+                    <div><b>7. Government and <br> Defense</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        <li> NDA (National Defence Academy)</li>
+                        <li> Merchant Navy</li>
+                        <li> Police Services</li>
+                    </div>
+                </div>
+
+
+                <div class="card 8">
+                    <div><b>8. Unique and Specialized Fields</b>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </div>
+                    <div class="descri">
+                        <img class="cross" src="accets/cross.svg" alt="">
+                        <li> Agricultural Science</li>
+                        <li> Marine Biology</li>
+                        <li> Horticulture</li>
+                        <li> Wildlife Conservation</li>
+                    </div>
+                </div>
+
+
+                <div style="background-image:linear-gradient(to right, #6a11cb, #2575fc);" class="card 9"><a
+                        href="exam.html" style="color: white; text-decoration: none;"> ALL EXAMS SCI,COM,ARTS<br>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            class="injected-svg"
+                            data-src="https://cdn.hugeicons.com/icons/arrow-down-01-solid-sharp.svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" role="img" color="#ffffff">
+                            <path d="M20.002 7.5H4.00195L12.002 16.5L20.002 7.5Z" fill="#ffffff"></path>
+                        </svg>
+                    </a></div>
+
+            </div>
+        <div class="footer"></div>
     </main>
 </body>
+
+<script src="script.js"></script>
 
 </html>
