--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,42 @@
   
 </head>
 <body>
+
+  <img class="img" width="1500px" src="accets/bgimg.jpg" alt="">
+  <header>
+    <nav>
+        <div class="logo">
+            <img src="accets/empowerU.png">
+        </div>
+        <div class="menu">
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="menu-button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                    width="50" height="50" color="#ffffff" fill="none">
+                    <path d="M4 5L20 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M4 12L20 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M4 19L20 19" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg></label>
+            <div class="dropdown">
+                <li><a href="EmpowerU.html">Home</a> </li>
+                <li><a href="career_path.html">Career Path</a> </li>
+                <li><a href="EmpowerU.html">Mental Health</a> </li>
+                <li><a href="EmpowerU.html">Resources</a> </li>
+                <li><a href="EmpowerU.html">About Us</a></li>
+            </div>
+        </div>
+        <ul>
+            <li><a href="signup.html">Login</a> </li>
+            <li><a href="EmpowerU.html">Home</a> </li>
+            <li><a href="career_path.html">Career Path</a> </li>
+            <li><a href="EmpowerU.html">Mental Health</a> </li>
+            <li><a href="EmpowerU.html">Resources</a> </li>
+            <li><a href="EmpowerU.html">About Us</a></li>
+        </ul>
+    </nav>
+</header>
   <div class="form-container">
     <h2>Empower U</h2>
     <form id="dynamicForm">
