--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
     </div>
     <div class="main">
         <div class="b1 b">
-            <h1>Sign in</h1>
+            <h1>Sign up</h1>
             <ul>
                 <li>Free Resources</li>
                 <li>Complete Guidance</li>
@@ -32,14 +32,14 @@
         </div>
         <div class="line"></div>
         <div class="b2 b">
-            <h1>Sign in</h1>
+            <h1>Sign up</h1>
             <p>Please log in your account to continue</p>
             <form class="info" action="get">
                 <input type="email" placeholder="Enter Your Email">
                 <input type="password" placeholder="Password">
                 
                 <label class="check" for="check"><input type="checkbox" id="check"> Keep me logged in</label>
-               <button class="signup">Sign In</button>
+               <button class="signup">Sign up</button>
             </form>
             <svg width="300" height="50" xmlns="http://www.w3.org/2000/svg">
                 <line x1="10" y1="25" x2="120" y2="25" stroke="black" stroke-width="2" />
