--- a/fontend/12th.html
+++ b/fontend/12th.html
@@ -32,8 +32,7 @@
                     <li><a href="EmpowerU.html">Home</a> </li>
                     <li><a href="career_path.html">Career Path</a> </li>
                     <li><a href="EmpowerU.html">Mental Health</a> </li>
-                    <li><a href="EmpowerU.html">Resources</a> </li>
-                    <li><a href="EmpowerU.html">About Us</a></li>
+                    <li><a href="mentalH.html">Resources</a> </li>
                 </div>
             </div>
             <ul>
@@ -41,8 +40,7 @@
                 <li><a href="EmpowerU.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
                 <li><a href="EmpowerU.html">Mental Health</a> </li>
-                <li><a href="EmpowerU.html">Resources</a> </li>
-                <li><a href="EmpowerU.html">About Us</a></li>
+                <li><a href="mentalH.html">Resources</a> </li>
             </ul>
         </nav>
     </header>
