--- a/fontend/EmpowerU.html
+++ b/fontend/EmpowerU.html
@@ -31,25 +31,23 @@
 						<li><a href="signup.html">Login</a> </li>
 						<li><a href="EmpowerU.html">Home</a> </li>
 						<li><a href="career_path.html">Career Path</a> </li>
-						<li><a href="EmpowerU.html">Mental Health</a> </li>
+						<li><a href="mentalH.html">Mental Health</a> </li>
 						<li><a href="EmpowerU.html">Resources</a> </li>
-						<li><a href="EmpowerU.html">About Us</a></li>
 					</div>
 				</div>
 				<ul>
-
+					
 					<li><a href="EmpowerU.html">Home</a> </li>
 					<li><a href="career_path.html">Career Path</a> </li>
-					<li><a href="EmpowerU.html">Mental Health</a> </li>
+					<li><a href="mentalH.html">Mental Health</a> </li>
 					<li><a href="EmpowerU.html">Resources</a> </li>
-					<li><a href="EmpowerU.html">About Us</a></li>
 					<li><a href="signup.html">Login</a> </li>
 					<li><a style="background-image: linear-gradient(to right, #6a11cb, #2575fc);" href="signup.html">Signup</a> </li>
 
 				</ul>
 			</nav>
 		</header>
-		</header>
+		
 
 		<div class="header-content">
 			<div>Empower Your Learning Journey.</div>
@@ -71,7 +69,6 @@
 			<ul>
 				<li><a class="ins" href="EmpowerU.html">Inspiration</a></li>
 				<li><a href="career_path.html">Career Option</a></li>
-				<li><a href="EmpowerU.html">Financial Planning</a></li>
 			</ul>
 		</div>
 		<div class="imgs">
