--- a/fontend/career_path.html
+++ b/fontend/career_path.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    <img src="accets/bgimg.jpg" alt="" class="bg">
     <header>
         <nav>
             <div class="logo">
@@ -33,23 +32,22 @@
                 <div class="dropdown">
                     <li><a href="EmpowerU.html">Home</a> </li>
                     <li><a href="career_path.html">Career Path</a> </li>
-                    <li><a href="EmpowerU.html">Mental Health</a> </li>
+                    <li><a href="mentalH.html">Mental Health</a> </li>
                     <li><a href="EmpowerU.html">Resources</a> </li>
-                    <li><a href="EmpowerU.html">About Us</a></li>
                 </div>
             </div>
             <ul>
                 <li><a href="signup.html">Login</a> </li>
                 <li><a href="EmpowerU.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
-                <li><a href="EmpowerU.html">Mental Health</a> </li>
+                <li><a href="mentalH.html">Mental Health</a> </li>
                 <li><a href="EmpowerU.html">Resources</a> </li>
-                <li><a href="EmpowerU.html">About Us</a></li>
             </ul>
         </nav>
     </header>
     <main>
         
+        <div class="h">Choose your option</div>
         <div class="home">
             <div class="b1 b"><a href="10th.html">What After 10th</a></div>
             <div class="b2 b"><a href="12th.html">What After 12th</a></div>
