--- a/fontend/exam.html
+++ b/fontend/exam.html
@@ -32,18 +32,16 @@
                 <div class="dropdown">
                     <li><a href="EmpowerU.html">Home</a> </li>
                     <li><a href="career_path.html">Career Path</a> </li>
-                    <li><a href="EmpowerU.html">Mental Health</a> </li>
+                    <li><a href="mentalH.html">Mental Health</a> </li>
                     <li><a href="EmpowerU.html">Resources</a> </li>
-                    <li><a href="EmpowerU.html">About Us</a></li>
                 </div>
             </div>
             <ul>
                 <li><a href="signup.html">Login</a> </li>
                 <li><a href="EmpowerU.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
-                <li><a href="EmpowerU.html">Mental Health</a> </li>
+                <li><a href="mentalH.html">Mental Health</a> </li>
                 <li><a href="EmpowerU.html">Resources</a> </li>
-                <li><a href="EmpowerU.html">About Us</a></li>
             </ul>
         </nav>
     </header>
