--- a/fontend/10th.html
+++ b/fontend/10th.html
@@ -31,18 +31,16 @@
                     <li><a href="EmpowerU.html">Login</a> </li>
                     <li><a href="EmpowerU.html">Home</a> </li>
                     <li><a href="career_path.html">Career Path</a> </li>
-                    <li><a href="EmpowerU.html">Mental Health</a> </li>
+                    <li><a href="mentalH.html">Mental Health</a> </li>
                     <li><a href="EmpowerU.html">Resources</a> </li>
-                    <li><a href="EmpowerU.html">About Us</a></li>
                 </div>
             </div>
             <ul>
                 <li><a href="EmpowerU.html">Login</a> </li>
                 <li><a href="EmpowerU.html">Home</a> </li>
                 <li><a href="career_path.html">Career Path</a> </li>
-                <li><a href="EmpowerU.html">Mental Health</a> </li>
+                <li><a href="mentalH.html">Mental Health</a> </li>
                 <li><a href="EmpowerU.html">Resources</a> </li>
-                <li><a href="EmpowerU.html">About Us</a></li>
             </ul>
         </nav>
     </header>
