--- a/fontend/EmpowerU.html
+++ b/fontend/EmpowerU.html
@@ -116,7 +116,38 @@
 	</div>
 
 	</div>
-
+	<footer class="footer">
+		<div class="lgo">
+			<img width="200px" src="accets/empowerU.png" alt="">
+		</div>
+        <div class="language-selector">
+            🌐 English ▼
+        </div>
+        <nav>
+            <a href="EmpowerU.html">Home</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="EmpowerU.html">Contact Us</a>
+            <a href="EmpowerU.html">FAQ</a>
+            <a href="resorse.html">Resources</a>
+        </nav>
+        <div>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Cookie Policy</a>
+            <a href="#">Help</a>
+            <a href="#">Report an Issue</a>
+            <a href="#">About Us</a>
+        </div>
+        <div class="social-icons">
+            <a href="#"><img src="accets/insta.svg" alt="Instagram"></a>
+            <a href="#"><img src="accets/facebook.svg" alt="Facebook"></a>
+            <a href="#"><img src="accets/whatsapp.svg" alt="WhatsApp"></a>
+            <a href="#"><img src="accets/lined.svg" alt="LinkedIn"></a>
+        </div>
+        <div class="copyright">
+            © 2024 Empower U. All rights reserved.
+        </div>
+    </footer>
 </body>
 
 </html>
